ci: add debug output for failing linux epoll test

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   linux:
     runs-on: ubuntu-latest
+    env:
+      CANCEL_READER_DEBUG: 1
     steps:
       - uses: actions/checkout@v4
         with:
